[package]
name = "rustygit"
version = "0.1.0"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1"

[badges]
travis-ci = { repository = "keirlawson/rusty-git" }