[package]
name = "rustygit"
version = "0.2.7"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"
description = "A simple interface for runnig Git commands"
license = "MIT OR Apache-2.0"
repository = "https://github.com/keirlawson/rusty-git"
readme = "README.md"
categories = ["development-tools"]
keywords = ["git"]


[dependencies]
regex = "1"
thiserror = "1"
serde = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[badges]
travis-ci = { repository = "keirlawson/rusty-git" }
